<resources>
    <string name="app_name">Pokeshene</string>
    <string name="title_activity_pokemon_info">PokemonInfoActivity</string>
    <string name="moves">Habilitys:</string>
    <string name="weight">Weight:</string>
    <string name="types">Types:</string>
    <string name="type">Type:</string>
    <string name="imageLoadError">Loading picture error </string>
    <string name="wrongResponse">Bad response of the server</string>
    <string name="pokemonSize">Size:</string>
    <string name="reset_email_instructions">We have sent you instructions to your email</string>
    <string name="failed_reset_email">Failed to send you a reset Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="forgot_password" translatable="false">Forgot Password</string>
    <string name="User_not_created">User Not created</string>
    <string name="enter_valid_password">Please Enter a valid Password</string>
    <string name="please_enter_email">Please Entre your email.</string>
    <string name="pleasee_enter_email">Please Enter your email</string>
    <string name="validpassword">Please Enter a valid Password</string>
    <string name="reset_password">Reset your password</string>
    <string name="enter_email">Enter your email</string>
    <string name="forgot_passwords" translatable="false">Forgot Password</string>
    <string name="enterr_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="longin2">Login</string>
    <string name="forgotpass2">Forgot your password</string>
    <string name="resgister2">Register</string>
    <string name="Enterpassword">Enter your password</string>
    <string name="enteremail">Enter your email</string>
</resources>
