<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    tools:context=".ui.pokemonInfo.PokemonInfoActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/imageViewBackground"

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/pokedex"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"/>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="60dp"
        android:padding="5dp"
        app:cardBackgroundColor="#56ab63"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewBackground"
        app:layout_constraintEnd_toEndOf="@+id/imageViewBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageViewBackground">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageViewPokemon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayoutSprites"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_gravity="bottom"
                android:layout_marginTop="4dp"
                android:orientation="horizontal"
                android:weightSum="4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageViewPokemon"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageViewSprite1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/imageViewSprite2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/imageViewSprite3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/imageViewSprite4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

            </LinearLayout>


            <TextView
                android:id="@+id/textViewType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/pokemon_solid"
                android:textSize="16sp"
                android:text="@string/types"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewPokemon" />

            <TextView
                android:id="@+id/textViewType2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/pokemon_solid"
                app:layout_constraintStart_toEndOf="@+id/textViewType"
                app:layout_constraintTop_toBottomOf="@+id/imageViewPokemon" />

            <TextView
                android:id="@+id/textViewType1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/pokemon_solid"
                app:layout_constraintStart_toEndOf="@+id/textViewType2"
                app:layout_constraintTop_toBottomOf="@+id/imageViewPokemon" />

            <TextView
                android:id="@+id/textViewWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/pokemon_solid"
                android:textSize="16sp"
                android:text="@string/weight"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewType" />

            <TextView
                android:id="@+id/textViewPokemonWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/pokemon_solid"
                app:layout_constraintStart_toEndOf="@+id/textViewWeight"
                app:layout_constraintTop_toBottomOf="@+id/textViewType2" />

            <TextView
                android:id="@+id/textViewSkills"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pokemon_solid"
                android:textSize="16sp"
                android:text="@string/moves"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textViewType1"
                app:layout_constraintTop_toBottomOf="@+id/linearLayoutSprites" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewPokemonMoves"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textViewType1"
                app:layout_constraintTop_toBottomOf="@+id/textViewSkills" />

            <TextView
                android:id="@+id/textViewHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/pokemon_solid"
                android:textSize="16sp"
                android:text="@string/pokemonSize"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewWeight" />

            <TextView
                android:id="@+id/textViewPokemonHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/pokemon_solid"
                app:layout_constraintStart_toEndOf="@+id/textViewHeight"
                app:layout_constraintTop_toBottomOf="@+id/textViewWeight" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>